src/components/bs5/linkColumns/linkColumns.scss
.link-column {
  --max-column-width: 46rem;
  background-color: var(--#{$prefix}body-bg);
  
  &:has(.col-1) {
    max-width: var(--max-column-width);
  }
  ul {
    width: 100%;  
    display: grid;
    gap: 0 1rem;
  }
  .col-1 {
    grid-template-columns: 1fr;
  }
  .col-2 {
    grid-template-columns: repeat(2, 1fr);
    @include media-breakpoint-down(md) { 
      grid-template-columns: repeat(1, 1fr);
    }
  }
  .col-3 {
    grid-template-columns: repeat(3, 1fr);
    @include media-breakpoint-down(lg) {
        grid-template-columns: repeat(2, 1fr);
    }
    @include media-breakpoint-down(md) {
        grid-template-columns: repeat(1, 1fr);
    }
  }
  .col-vert-1 {
    display: block;
    column-count: 1;
    column-gap: 1rem;
  }
  .col-vert-2 {
    display: block;
    column-count: 2;
    column-gap: 1rem;
    @include media-breakpoint-down(md) {
      column-count: 1;
    }
  }
  .col-vert-3 {
    display: block;
    column-count: 3;
    column-gap: 1rem;
    @include media-breakpoint-down(lg) {
        column-count: 2;
    }
    @include media-breakpoint-down(md) {
      column-count: 1;
    }
  }
  .nav-item {
    max-width: var(--max-column-width);
    display: flex;
    gap: 1rem;
    align-items: center;
    align-content: center;
    border-block-end: 1px solid var(--#{$prefix}light-grey);
    // Required to reset styles from .qld-content-body li
    margin-block: 0;
    //Reset the line height too to override styles from .qld-content-body li
    line-height: 1.5rem;
    .nav-link {
      text-decoration: underline;
      text-decoration-color: transparent;
      text-decoration-thickness: 0;
      transition: text-decoration-thickness 0.2s ease, text-decoration-color 0.2s ease;
      display: flex;
      align-items: center;
      flex: 1;
      padding-block: 1rem;
      padding-inline: 0;
      color: var(--#{$prefix}link-color);
      font-weight: 600;
      &::after {
        height: 1.25rem;
        width: 2rem;
        margin-inline-end: 0.5rem;
        margin-inline-start: auto;
        flex: 0 0 auto;
        content: "";
        mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 448 512'%3E%3Cpath fill='currentColor' d='M443.7 266.8l-165.9 176C274.5 446.3 269.1 448 265.5 448c-3.986 0-7.988-1.375-11.16-4.156c-6.773-5.938-7.275-16.06-1.118-22.59L393.9 272H16.59c-9.171 0-16.59-7.155-16.59-15.1S7.421 240 16.59 240h377.3l-140.7-149.3c-6.157-6.531-5.655-16.66 1.118-22.59c6.789-5.906 17.27-5.469 23.45 1.094l165.9 176C449.4 251.3 449.4 260.7 443.7 266.8z'/%3E%3C/svg%3E");
        mask-repeat: no-repeat;
        mask-position: right center;
        background-color: var(--#{$prefix}action-icon-color);
        transition: margin-inline-end 0.2s ease, width 0.2s ease;
      }
      &:hover {
        text-decoration-color: var(--#{$prefix}link-color);
        text-decoration-thickness: 2px;
        transition: text-decoration-thickness 0.2s ease, text-decoration-color 0.2s ease;
        &::after {
          background-color: var(--#{$prefix}action-icon-hover-color);
          margin-inline-end: 0rem;
          width: 2.5rem;
          transition: margin-inline-end 0.2s ease, width 0.2s ease;
        }
      }
    }
  }
  .all-link{
    grid-column: 1/-1;
    max-width: 100%;
    border-block-end: none;
    column-span: all;
    .qld-cta-link {
      margin-block-start: 2rem;
      margin-inline-start: auto;
      @include media-breakpoint-down(lg) {
        margin-block-start: 1.5rem;
      }
    }
  }
}

